--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,26 @@ Description:  You can add your custom CSS here and it will overwrite template st
     cursor: default;
 }
 
+.row.adjust {
+    justify-content: space-between;
+}
+
+.row.adjust .col-md-4 {
+    width: 95px;
+    text-align: center;
+}
+
+.row.adjust .col-md-4 .counter{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+}
+
+.row.adjust .col-md-4 .counter svg{
+    min-height: 40px;
+}
+
 .zap-fixed {
     position: fixed;
     bottom: 25px;
@@ -80,7 +100,7 @@ Description:  You can add your custom CSS here and it will overwrite template st
         bottom: 0 !important;
         left: 0 !important;
         border-radius: 0 10px 0 0px !important;
-        width: 140px;
+        width: 150px;
     }
 
 
